--- a/xxx.html
+++ b/xxx.html
@@ -1,15 +1,51 @@
 <!DOCTYPE html>
-<html>
-<title>Vivionet</title>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vivionet</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+   
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
- <nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="libri.html">Libri</a></li>
-    <li><a href="autori.html">Autori</a></li>
-    <li><a href="contatti.html">Contatti</a></li>
-  </ul>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-2">
+    <a class="navbar-brand" href="#">
+        <img src="https://www.svgrepo.com/show/303109/adobe-xd-logo.svg" alt="Logo" height="40">
+    </a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse p-2" id="navbarNav">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Catalogo</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Categorie</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Bestsellers</a>
+            </li>
+        </ul>
+
+        <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-light" type="submit">Search</button>
+        </form>
+    </div>
 </nav>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
