--- a/xxx.html
+++ b/xxx.html
@@ -11,41 +11,57 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg vivlionet-nav px-4">
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-2">
-    <a class="navbar-brand" href="#">
-        <img src="https://www.svgrepo.com/show/303109/adobe-xd-logo.svg" alt="Logo" height="40">
+    <!-- LOGO -->
+    <a class="navbar-brand d-flex align-items-center" href="#">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Arnoldo_Mondadori_Editore_logo.svg/512px-Arnoldo_Mondadori_Editore_logo.svg.png" 
+             alt="Logo" height="34">
+        <span class="brand-text ms-2">VIVLIONET</span>
     </a>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <!-- Toggler -->
+    <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#vivlionetMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse p-2" id="navbarNav">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Catalogo</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Categorie</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Bestsellers</a>
-            </li>
+    <div class="collapse navbar-collapse" id="vivlionetMenu">
+
+        <!-- MENU A SINISTRA -->
+        <ul class="navbar-nav ms-4 mb-2 mb-lg-0">
+            <li class="nav-item"><a class="nav-link" href="#">Libri</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Autori</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Storie</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Eventi</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Newsletter</a></li>
         </ul>
 
-        <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light" type="submit">Search</button>
+        <!-- SPAZIO IN MEZZO -->
+        <div class="flex-grow-1"></div>
+
+        <!-- ICONA PROFILO -->
+        <a href="#" class="nav-icon">
+            <img src="https://www.svgrepo.com/show/382106/user-profile.svg" height="26">
+        </a>
+
+        <!-- LINEA DI SEPARAZIONE -->
+        <div class="separator mx-3"></div>
+
+        <!-- NUOVA BARRA DI RICERCA -->
+        <form class="search-container">
+            <input type="text" class="search-input" placeholder="Cerca...">
+            <button class="search-btn" type="submit">
+                <img src="https://www.svgrepo.com/show/532555/search.svg" height="20">
+            </button>
         </form>
+
     </div>
 </nav>
 
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
 
 </body>
 </html>
