--- a/xxx.html
+++ b/xxx.html
@@ -30,10 +30,9 @@
         <!-- MENU A SINISTRA -->
         <ul class="navbar-nav ms-4 mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" href="#">Libri</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Autori</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Storie</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Eventi</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Newsletter</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Catalogo</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Categorie</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Bestsellers</a></li>
         </ul>
 
         <!-- SPAZIO IN MEZZO -->
