--- a/xxx.html
+++ b/xxx.html
@@ -3,31 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vivionet</title>
-
+    <title>Vivlionet</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-   
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <nav class="navbar navbar-expand-lg vivlionet-nav px-4">
 
-    <!-- LOGO -->
     <a class="navbar-brand d-flex align-items-center" href="#">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Arnoldo_Mondadori_Editore_logo.svg/512px-Arnoldo_Mondadori_Editore_logo.svg.png" 
              alt="Logo" height="34">
         <span class="brand-text ms-2">VIVLIONET</span>
     </a>
 
-    <!-- Toggler -->
     <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#vivlionetMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="vivlionetMenu">
-
-        <!-- MENU A SINISTRA -->
         <ul class="navbar-nav ms-4 mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" href="#">Libri</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Catalogo</a></li>
@@ -35,32 +29,59 @@
             <li class="nav-item"><a class="nav-link" href="#">Bestsellers</a></li>
         </ul>
 
-        <!-- SPAZIO IN MEZZO -->
         <div class="flex-grow-1"></div>
 
-        <!-- ICONA PROFILO -->
         <a href="#" class="nav-icon">
             <img src="https://www.svgrepo.com/show/382106/user-profile.svg" height="26">
         </a>
 
-        <!-- LINEA DI SEPARAZIONE -->
         <div class="separator mx-3"></div>
 
-        <!-- NUOVA BARRA DI RICERCA -->
         <form class="search-container">
             <input type="text" class="search-input" placeholder="Cerca...">
             <button class="search-btn" type="submit">
                 <img src="https://www.svgrepo.com/show/532555/search.svg" height="20">
             </button>
         </form>
-
     </div>
 </nav>
 
+<div class="container py-5">
+    <h1 class="text-center mb-5">I nostri ultimi libri</h1>
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="col">
+            <div class="card h-100 libro-card">
+                <img src="https://via.placeholder.com/500x200" class="card-img-top" alt="Libro 1">
+                <div class="card-body">
+                    <h5 class="card-title">Le parole della pioggia</h5>
+                    <p class="card-text">Romanzi</p>
+                    <a href="#" class="btn btn-primary">Acquista</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100 libro-card">
+                <img src="https://via.placeholder.com/500x200" class="card-img-top" alt="Libro 2">
+                <div class="card-body">
+                    <h5 class="card-title">Il mio segreto</h5>
+                    <p class="card-text">Narrativa</p>
+                    <a href="#" class="btn btn-primary">Acquista</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100 libro-card">
+                <img src="https://via.placeholder.com/500x200" class="card-img-top" alt="Libro 3">
+                <div class="card-body">
+                    <h5 class="card-title">Il cerchio dei giorni</h5>
+                    <p class="card-text">Romanzo</p>
+                    <a href="#" class="btn btn-primary">Acquista</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-
-
 </body>
 </html>
