--- a/xxx.html
+++ b/xxx.html
@@ -51,17 +51,17 @@
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <div class="col">
             <div class="card h-100 libro-card">
-                <img src="https://via.placeholder.com/500x200" class="card-img-top" alt="Libro 1">
+                <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcT-4Lq-lamtVBzAp5D9TJQEBHDs5F309nZICWiOgskbJpUz0BuIkd78VT9Y2nN-sZdIq_puFVVeectIDhx-zb6QfFZWZ3jnJQ2J5l1YzbrQpiP7TVsjdrN-VA" class="card-img-top" alt="Libro 1">
                 <div class="card-body">
                     <h5 class="card-title">Le parole della pioggia</h5>
-                    <p class="card-text">Romanzi</p>
+                    <p class="card-text">Romanzo</p>
                     <a href="#" class="btn btn-primary">Acquista</a>
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="card h-100 libro-card">
-                <img src="https://via.placeholder.com/500x200" class="card-img-top" alt="Libro 2">
+                <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRQXn47XCGDA8KIbikgkyzbnilXZXN4Pqxubup2GiwsJUjcsBjz" class="card-img-top" alt="Libro 2">
                 <div class="card-body">
                     <h5 class="card-title">Il mio segreto</h5>
                     <p class="card-text">Narrativa</p>
@@ -71,7 +71,7 @@
         </div>
         <div class="col">
             <div class="card h-100 libro-card">
-                <img src="https://via.placeholder.com/500x200" class="card-img-top" alt="Libro 3">
+                <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQvrJwl2R3hCAjwumts05EDpAQyNVVdWjM4oPIfMeu-sq4RCmk7" class="card-img-top" alt="Libro 3">
                 <div class="card-body">
                     <h5 class="card-title">Il cerchio dei giorni</h5>
                     <p class="card-text">Romanzo</p>
