--- a/xxx.html
+++ b/xxx.html
@@ -11,7 +11,7 @@
 
 <nav class="navbar navbar-expand-lg vivlionet-nav px-4">
     <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Arnoldo_Mondadori_Editore_logo.svg/512px-Arnoldo_Mondadori_Editore_logo.svg.png" 
+        <img src="https://static.vecteezy.com/system/resources/previews/012/274/592/non_2x/floral-botanical-alphabet-vintage-hand-drawn-monogram-letter-v-letter-with-plants-and-flowers-lettering-isolated-on-white-vector.jpg" 
              alt="Logo VivlioNet" height="34">
         <span class="brand-text ms-2">VIVLIONET</span>
     </a>
