--- a/xxx.html
+++ b/xxx.html
@@ -89,16 +89,19 @@
 
 <div class="scrollable-list px-4 py-3">
   <ul>
-    <li>Giallo</li>
-    <li>Romanzo rosa</li>
-    <li>Horror</li>
-    <li>Fantasy</li>
-    <li>Fantascienza</li>
-    <li>Narrativa</li>
-    <li>Storici</li>
-    <li>Bambini</li>
+    
+    <li><img src="icone/giallo.png" class="genere-icona">Giallo</li>
+    <li><img src="icone/rosa.png" class="genere-icona">Romanzo rosa</li>
+    <li><img src="icone/giallo.png" class="genere-icona">Horror</li>
+    <li><img src="icone/rosa.png" class="genere-icona">Fantasy</li>
+    <li><img src="icone/giallo.png" class="genere-icona">Fantascienza</li>
+    <li><img src="icone/rosa.png" class="genere-icona">Narrativa</li>
+    <li><img src="icone/giallo.png" class="genere-icona">Storici</li>
+    <li><img src="icone/giallo.png" class="genere-icona">Bambini</li>
+    <li><img src="icone/rosa.png" class="genere-icona">Religiosi</li>
+
   </ul>
-</div>
+  </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
